--- a/.gitignore
+++ b/.gitignore
@@ -11,22 +11,37 @@
 # Test binary, built with `go test -c`
 *.test
 
-# Code coverage profiles and other test artifacts
+# Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-coverage.*
-*.coverprofile
-profile.cov
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
 # Go workspace file
 go.work
-go.work.sum
 
-# env file
-.env
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Project specific
+output/
+temp/
+*.mp3
+*.wav
+*.m4b
+*.aac
+
+# Add the bin/ directory to the .gitignore file to ignore all contents of the bin directory
+bin/
