remove speaker file, add speaker dir to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ output/
 temp/
 test/
 .env
+speakers/
 
 # Add the bin/ directory to the .gitignore file to ignore all contents of the bin directory
 bin/
