removed godotenv. using viper config instead

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ temp/
 test/
 .env
 speakers/
+book/
 
 # Add the bin/ directory to the .gitignore file to ignore all contents of the bin directory
 bin/
