--- a/config.json
+++ b/config.json
@@ -2,5 +2,9 @@
   "epub_path": "./book/book.epub",
   "image_path": "./book/cover.png",
   "speaker_wav": "./speakers/speaker.wav",
-  "dist_dir": "./.dist"
-} 
+  "dist_dir": "./.dist",
+  "verbose_logs": false,
+  "tts": {
+    "max_retries": 3
+  }
+}
