--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
   "dist_dir": "./.dist",
   "verbose_logs": false,
   "tts": {
-    "max_retries": 3
+    "max_retries": 3,
+    "parallel_audio_count": 1
   }
 }
