--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   "verbose_logs": false,
   "tts": {
     "max_retries": 3,
-    "use_vits": true,
+    "use_vits": false,
     "vits_voice": "p287"
   }
 }
