--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
   "dist_dir": "./.dist",
   "output_format": "m4b",
   "verbose_logs": false,
+  "test_mode": false,
   "tts": {
     "parallel_audio_count": 1,
     "max_retries": 3,
