--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "epub_path": "./book/book.epub",
-  "image_path": "./book/cover.png",
+  "epub_path": "./examples/test/book.epub",
+  "image_path": "./examples/test/cover.png",
   "speaker_wav": "./speakers/speaker.wav",
   "dist_dir": "./.dist",
   "output_format": "m4b",
