--- a/config.json
+++ b/config.json
@@ -1,16 +1,31 @@
 {
-  "epub_path": "./examples/test/book.epub",
-  "image_path": "./examples/test/cover.png",
-  "speaker_wav": "./speakers/speaker.wav",
-  "dist_dir": "./.dist",
-  "output_format": "m4b",
   "verbose_logs": false,
-  "test_mode": false,
-  "tts": {
-    "parallel_audio_count": 1,
-    "max_retries": 3,
-    "use_vits": false,
-    "vits_voice": "p287",
-    "device": "auto"
+  "test_mode": true,
+  "epub": {
+    "path": "./examples/test/book.epub",
+    "cover_image": "./examples/test/cover.png",
+    "title": "Test Book",
+    "author": "Test Author",
+    "language": "en",
+    "publisher": "Test Publisher",
+    "description": "This is a test book for the audiobook generation."
+  },
+  "output": {
+    "path": "./.dist",
+    "format": "m4b",
+    "filename": "test_audiobook"
+  },
+  "model": {
+    "name": "tts_models/multilingual/multi-dataset/xtts_v2",
+    "language": "en",
+    "speaker_wav": "./speakers/speaker.wav",
+    "speaker_idx": "p285",
+    "concurrency": 8,
+    "max_retries": 5,
+    "device": "cpu"
+  },
+  "vocoder": {
+    "name": "vocoder_models/en/blizzard2013/hifigan_v2",
+    "language": "en"
   }
 }
